# wikipedia-define-cli

./: .gitignore  README.md  define.py  pyproject.toml  requirements.txt  setup.cfg
src/: config_util.py  define.py
