[options.entry_points]
console_scripts =
    wikipedia-define-cli = define:cli

[options]
package_dir =
    = src
install_requires =
    appdirs ~= 1.4.4
    charset-normalizer ~= 3.2.0
    click ~= 8.1.4
    colorama ~= 0.4.6
    requests ~= 2.31.0
    urllib3 ~= 2.0.3

[options.packages.find]
where = src
